[tool.poetry]
name = "rwrap"
version = "0.1.1"
description = "A thin wrapper around rpy2 with strong opinions on how data types should be converted."
license = "MIT"
authors = ["kpj <kim.philipp.jablonski@gmail.com>"]
readme = "README.md"
repository = "https://github.com/kpj/rwrap"

[tool.poetry.dependencies]
python = "^3.8.0"
rpy2 = "^3.4.5"
pandas = "^1.3.1"
numpy = "^1.21.1"
loguru = "^0.5.3"
geopandas = ">=0.9,<0.11"
Shapely = "^1.7.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-markdown = "^1.0.2"
bump2version = "^1.0.1"
black = "^21.7b0"

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
