[tool.poetry]
name = "rwrap"
version = "0.1.2"
description = "A thin wrapper around rpy2 with strong opinions on how data types should be converted."
license = "MIT"
authors = ["kpj <kim.philipp.jablonski@gmail.com>"]
readme = "README.md"
repository = "https://github.com/kpj/rwrap"

[tool.poetry.dependencies]
python = "^3.8.0"
rpy2 = "^3.4.5"
pandas = "^1.4.0"
numpy = "^1.22.1"
loguru = "^0.5.3"
geopandas = "^0.10.2"
Shapely = "^1.8.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-markdown = "^1.0.2"
bump2version = "^1.0.1"
black = "^21.12b0"

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
