[tool.poetry]
name = "rwrap"
version = "0.2.0"
description = "A thin wrapper around rpy2 with strong opinions on how data types should be converted."
license = "MIT"
authors = ["kpj <kim.philipp.jablonski@gmail.com>"]
readme = "README.md"
repository = "https://github.com/kpj/rwrap"

[tool.poetry.dependencies]
python = "^3.8.0"
rpy2 = "^3.4.5"
pandas = "^1.4.0"
numpy = "^1.22.1"
loguru = ">=0.5.3,<0.7.0"
geopandas = ">=0.10.2,<0.12.0"
Shapely = "^1.8.0"
igraph = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-markdown = "^1.0.2"
bump2version = "^1.0.1"
black = "^22.1"

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
